# Produ-o

./: app.py  app_launcher.py  app_novo.py  build_exe.py  create_admin.py  criar_executavel_final.py  employee_db.py  funcionarios.csv  gerar_executavel.py  github_setup.bat  github_upload.py  hook-streamlit.py  iniciar_aplicacao.bat  pyproject.toml  requirements.txt  user_auth.py  usuarios.csv
.streamlit/: config.toml
attached_assets/: MovimentacaoVeiculos (19).xlsx  Pasted-streamlit-errors-StreamlitDuplicateElementId-There-are-multiple-plotly-chart-elements-with-the-same-1746923174636.txt
